# skel

./: AUTHORS  BUGS  ChangeLog  INSTALL  NEWS  README  README.md  THANKS  TODO
auto-cxx/: .emacs.desktop
auto-cxx/src/: General.hxx  Makefile.am
c/: Makefile
c++/: Makefile
c++/src/: ANSILibrary  Application.cc  General
c/src/: global.h  main.c  system.h
cxx/: Makefile
cxx/justmake/: Makefile.automatic-dependencies  Makefile.build-rules  Makefile.commands  Makefile.dirs  Makefile.files  Makefile.first  Makefile.functions  Makefile.justmake  Makefile.options  Makefile.pattern-rules  Makefile.recursive  Makefile.test  Makefile.utilities
cxx/src/: ISO_Library.hxx  Utility.hxx
deep/: Makefile
deep/dir2/: Makefile
doc/: ChangeLog  exas-build-targets.txt  gnu-build-standards.txt  make-summary.txt  release-steps.txt
start-old/: ANSILibrary.hxx  Application.cxx  General.hxx  Makefile
